<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainactivity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/url_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/spinner_request_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/spinnerItems" />

                <EditText
                    android:id="@+id/edt_url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/url_hint"
                    android:inputType="textUri"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/btn_send_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_button_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/body_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F1FEFF"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/url_layout">

                <TextView
                    android:id="@+id/tv_body_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_title"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edt_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/body_field_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#F1FEFF"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/body_layout">

                <TextView
                    android:id="@+id/tv_headers_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_title"
                    android:textColor="#000" />

                <include layout="@layout/header_item" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_add_new_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_add_new"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>