<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/status_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_status_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_title"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_status"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F1FEFF"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_request_headers_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/request_headers"
                    android:textColor="#000" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/sv_request_headers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_request_headers"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F1FEFF"
                        android:textColor="#000" />
                </androidx.core.widget.NestedScrollView>

                <TextView
                    android:id="@+id/tv_query_param_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/query_param"
                    android:textColor="#000" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/sv_query_param"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_query_param"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F1FEFF"
                        android:textColor="#000" />

                </androidx.core.widget.NestedScrollView>

                <TextView
                    android:id="@+id/tv_response_body_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Response_body"
                    android:textColor="#000" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/sv_response_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_response_body"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F1FEFF"
                        android:textColor="#000" />

                </androidx.core.widget.NestedScrollView>

                <TextView
                    android:id="@+id/tv_response_headers_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/response_headers"
                    android:textColor="#000" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/sv_response_headers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_response_headers"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F1FEFF"
                        android:textColor="#000" />

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>